--- a/configure.in
+++ b/configure.in
@@ -398,12 +398,12 @@ if test "x$with_sasl" != "xno"; then
           [You must install the Cyrus SASL development package in order to compile libvirt])
     fi])
   if test "x$with_sasl" != "xno" ; then
-    AC_CHECK_LIB(sasl2, sasl_client_init,[],[
+    AC_CHECK_LIB(sasl2, sasl_client_init,[with_sasl=yes],[
       if test "x$with_sasl" = "xcheck" ; then
           with_sasl=no
       else
-         AC_MSG_ERROR(
-           [You must install the Cyrus SASL library in order to compile and run libvirt])
+          AC_MSG_ERROR(
+            [You must install the Cyrus SASL library in order to compile and run libvirt])
       fi])
   fi
   CFLAGS="$old_cflags"
