--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -29,7 +29,7 @@ Requires: iptables
 Requires: nc
 Requires: cyrus-sasl
 # Not technically required, but makes 'out-of-box' config
-# work correctly & doesn't have onerous dependancies
+# work correctly & doesn't have onerous dependencies
 Requires: cyrus-sasl-md5
 %if %{with_polkit}
 Requires: PolicyKit >= 0.6
@@ -52,7 +52,7 @@ Obsoletes: libvir
 ExclusiveArch: i386 x86_64 ia64
 
 %description
-Libvirt is a C toolkit to interract with the virtualization capabilities
+Libvirt is a C toolkit to interact with the virtualization capabilities
 of recent versions of Linux (and other OSes).
 
 %package devel
