Add framework for code style- and syntax-checking rules.
	Almost all tests are initially disabled via the list in Makefile.cfg.
	* Makefile.am (EXTRA_DIST): Add .x-sc_avoid_if_before_free.
	Omit names of files that automake includes automatically.
	* .x-sc_avoid_if_before_free: New file.
	* build-aux/vc-list-files: Likewise.
	* build-aux/find-unnecessary-if-before-free: Likewise.
	* GNUmakefile, Makefile.cfg, Makefile.maint: New files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,9 +5,11 @@ SUBDIRS = gnulib/lib include src qemud proxy docs gnulib/tests \
 
 ACLOCAL_AMFLAGS = -I m4 -I gnulib/m4
 
-EXTRA_DIST = libvirt.spec.in libvirt.spec COPYING.LIB \
-             libvirt.pc.in libvirt.pc TODO AUTHORS ChangeLog \
-	     NEWS README $(man_MANS) autobuild.sh
+EXTRA_DIST = \
+  libvirt.spec libvirt.spec.in \
+  libvirt.pc libvirt.pc.in \
+  $(man_MANS) autobuild.sh \
+  .x-sc_avoid_if_before_free
 
 man_MANS = virsh.1
 
