Enable the <config.h>-requiring test; fix violations
Use <config.h>, not "config.h", per autoconf documentation.
* Makefile.cfg (local-checks-to-skip) [sc_require_config_h]: Enable.
* .x-sc_require_config_h: New file, to list exempted files.
* Makefile.am (EXTRA_DIST): Add .x-sc_require_config_h.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,8 @@ EXTRA_DIST = \
   libvirt.spec libvirt.spec.in \
   libvirt.pc libvirt.pc.in \
   $(man_MANS) autobuild.sh \
-  .x-sc_avoid_if_before_free
+  .x-sc_avoid_if_before_free \
+  .x-sc_require_config_h
 
 man_MANS = virsh.1
 
