--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,16 @@
-src/libvirt.c
-src/virterror.c
-src/xmlrpc.c
-src/hash.c
-src/test.c
-src/xml.c
-src/sexpr.c
-src/xend_internal.c
-src/virsh.c
+gnulib/lib/gai_strerror.c
 src/conf.c
-src/xs_internal.c
+src/console.c
+src/hash.c
+src/libvirt.c
 src/proxy_internal.c
+src/remote_internal.c
+src/sexpr.c
+src/test.c
+src/virsh.c
+src/virterror.c
 src/xen_internal.c
+src/xend_internal.c
+src/xml.c
+src/xmlrpc.c
+src/xs_internal.c
