--- a/Makefile.maint
+++ b/Makefile.maint
@@ -304,6 +304,11 @@ sc_unmarked_diagnostics:
 	  { echo '$(ME): found unmarked diagnostic(s)' 1>&2;		\
 	    exit 1; } || :
 
+sc_prohibit_virBufferAdd_with_string_literal:
+	@grep -nE '\<virBufferAdd *\([^,]+, *"[^"]' $$($(CVS_LIST_EXCEPT)) && \
+	  { echo '$(ME): use virBufferAddLit, not virBufferAdd,' \
+	      'with a string literal' 1>&2; exit 1; } || :
+
 # Avoid useless parentheses like those in this example:
 # #if defined (SYMBOL) || defined (SYM2)
 sc_useless_cpp_parens:
