Ignore built test files

--- a/gnulib/tests/.cvsignore
+++ b/gnulib/tests/.cvsignore
@@ -1,3 +1,26 @@
 .deps
+.libs
 Makefile
 Makefile.in
+test-alloca-opt
+test-arpa_inet
+test-fseeko
+test-getaddrinfo
+test-getdelim
+test-getline
+test-lseek
+test-netinet_in
+test-snprintf
+test-stdbool
+test-stdint
+test-stdio
+test-stdlib
+test-string
+test-sys_select
+test-sys_socket
+test-sys_stat
+test-sys_time
+test-unistd
+test-vasnprintf
+test-vasprintf
+test-wchar
