--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -52,3 +52,8 @@ local-checks-to-skip =			\
   patch-check				\
   check-AUTHORS				\
   changelog-check
+
+useless_free_options =		\
+  --name=sexpr_free		\
+  --name=xmlXPathFreeContext	\
+  --name=xmlXPathFreeObject
