--- a/Makefile.maint
+++ b/Makefile.maint
@@ -40,7 +40,8 @@ syntax-check: $(local-check)
 ## --------------- ##
 
 sc_avoid_if_before_free:
-	@$(srcdir)/build-aux/find-unnecessary-if-before-free		\
+	@$(srcdir)/build-aux/useless-if-before-free			\
+		$(useless_free_options)					\
 	    $$($(CVS_LIST_EXCEPT)) &&					\
 	  { echo '$(ME): found useless "if" before "free" above' 1>&2;	\
 	    exit 1; } || :
