Added main internal storage driver impl

--- a/configure.in
+++ b/configure.in
@@ -689,6 +689,8 @@ AC_SUBST(CYGWIN_EXTRA_LIBADD)
 AC_SUBST(CYGWIN_EXTRA_PYTHON_LIBADD)
 AC_SUBST(MINGW_EXTRA_LDFLAGS)
 
+AC_SYS_LARGEFILE
+
 # very annoying
 rm -f COPYING
 cp COPYING.LIB COPYING
