--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,9 @@ src/proxy_internal.c
 src/qemu_conf.c
 src/qemu_driver.c
 src/remote_internal.c
+src/storage_backend.c
+src/storage_conf.c
+src/storage_driver.c
 src/sexpr.c
 src/test.c
 src/uuid.c
