--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/qemu_conf.c
 src/qemu_driver.c
 src/remote_internal.c
 src/storage_backend.c
+src/storage_backend_fs.c
 src/storage_conf.c
 src/storage_driver.c
 src/sexpr.c
