--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ src/qemu_driver.c
 src/remote_internal.c
 src/storage_backend.c
 src/storage_backend_fs.c
+src/storage_backend_logical.c
 src/storage_conf.c
 src/storage_driver.c
 src/sexpr.c
