--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ src/remote_internal.c
 src/storage_backend.c
 src/storage_backend_fs.c
 src/storage_backend_logical.c
+src/storage_backend_iscsi.c
 src/storage_conf.c
 src/storage_driver.c
 src/sexpr.c
