--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/storage_backend.c
 src/storage_backend_fs.c
 src/storage_backend_logical.c
 src/storage_backend_iscsi.c
+src/storage_backend_disk.c
 src/storage_conf.c
 src/storage_driver.c
 src/sexpr.c
